# MeshBuilder

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  meshbuild_workflow.sh
src/: main.cpp
src/Headers/: Definitions.h  Inclusions.h  globalFns.cpp  globalFns.h
src/Mathutil/: geometry.h  mathutil.cpp  mathutil.h  predicates.cpp  predicates.h
src/bFlowNet/: bFlowNet.cpp  bFlowNet.h
src/bGraph/: bGraph.cpp  bGraph.h  bGraphNode.cpp  bGraphNode.h
src/bInOut/: bInputFile.cpp  bInputFile.h
src/bListInputData/: bListInputData.h
src/bMesh/: bMesh.h  bTriangulator.cpp  bTriangulator.h  heapsort.h
src/bMeshBuilder/: bMeshBuilder.cpp  bMeshBuilder.h
src/bMeshElements/: bMeshElements.cpp  bMeshElements.h
src/bMeshList/: bMeshList.h
src/metis_builds/GKlib/: csr.c  graph.c
src/metis_builds/METIS/include/: metis.h
src/metis_builds/METIS/libmetis/: contig.c  ometis.c  options.c  struct.h
src/metis_builds/METIS/programs/: cmdline_ndmetis.c  stat.c
src/metis_scripts/: MS1_flow_12nodes.reach  MS1_flow_16nodes.reach  MS1_flow_24nodes.reach  MS1_flow_48nodes.reach  MS1_flow_8nodes.reach  MS1_metis_flow.dat.part.12  MS1_metis_flow.dat.part.16  MS1_metis_flow.dat.part.24  MS1_metis_flow.dat.part.48  MS1_metis_flow.dat.part.8  MS1_metis_nconn.dat.part.12  MS1_metis_nconn.dat.part.16  MS1_nconn_12nodes.reach  MS1_nconn_16nodes.reach  connectivity.meshb  connectivity2metis.pl  flow_MS1_12nodes_stats.out  flow_MS1_16nodes_stats.out  flow_MS1_24nodes_stats.out  flow_MS1_48nodes_stats.out  flow_MS1_8nodes_stats.out  flow_MS1nodes_12_stats.out  flow_MS1nodes_16_stats.out  flow_MS1nodes_24_stats.out  flow_MS1nodes_48_stats.out  flow_MS1nodes_8_stats.out  gpmetis  kmetis  meshbuild_workflow.sh  nconn_MS1_12nodes_stats.out  nconn_MS1_16nodes_stats.out  nconn_MS1nodes_12_stats.out  nconn_MS1nodes_16_stats.out  run_metis.ksh  run_metis.zsh
src/workflow/: metis2tribs.pl
